--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Minesweeper with React",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "webpack-dev-server --content-base src --inline --hot",
+    "dev": "node server.js",
     "test": "test"
   },
   "author": "Amanda Helliwell",
@@ -27,7 +27,7 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "react-hot-loader": "^3.0.0-beta.6",
+    "react-hot-loader": "^1.3.0",
     "webpack-combine-loaders": "^2.0.0",
     "webpack-dev-server": "^1.16.2"
   }
