--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "dev": "node server.js",
-    "test": "test"
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "author": "Amanda Helliwell",
   "license": "ISC",
@@ -27,7 +28,12 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "babel-jest": "^16.0.0",
+    "enzyme": "^2.5.1",
+    "jest": "^16.0.2",
+    "react-addons-test-utils": "^15.3.2",
     "react-hot-loader": "^1.3.0",
+    "redux-mock-store": "^1.2.1",
     "webpack-combine-loaders": "^2.0.0",
     "webpack-dev-server": "^1.16.2"
   }
